packages/react/src/Bento/Bento.module.css
.Bento {
  display: grid;
  width: 100%;
  grid-template-columns: repeat(12, minmax(0, 1fr));
  grid-auto-rows: var(--base-size-80);
  grid-gap: var(--brand-Bento-gap-small);
  position: relative;
}

.Bento__Item {
  background-color: var(--brand-Bento-bgColor);
  border-radius: var(--brand-Bento-item-borderRadius-small);
  display: grid;
  grid-gap: var(--base-size-32);
  grid-template-rows: auto 1fr;
  grid-template-columns: 1fr;
  overflow: hidden;
  border: 1px solid var(--brand-color-border-default);
}

@media screen and (min-width: 80rem) {
  .Bento {
    gap: var(--brand-Bento-gap-large);
  }
  .Bento__Item {
    border-radius: var(--brand-Bento-item-borderRadius-large);
  }
}

@media screen and (min-width: 48rem) {
  .Bento {
    gap: var(--brand-Bento-gap-medium);
  }
  .Bento__Item {
    border-radius: var(--brand-Bento-item-borderRadius-medium);
  }
}

/* Bento Content */
.Bento__Item--visual-as-background .Bento__Content {
  order: 1;
  grid-row: 1 / span 2;
  grid-column: 1 / span 2;
}

.Bento__Content {
  display: flex;
  flex-direction: column;
  align-items: start;
  height: 100%;
  color: var(--brand-color-text-default);
}

.Bento__Content-icon {
  margin-bottom: var(--base-size-32);
}

.Bento__heading--muted {
  color: var(--brand-color-text-muted);
}

.Bento__heading--muted em {
  font-style: normal;
  color: var(--brand-color-text-default);
}

/* Bento Visual */
.Bento__Visual {
  height: 100%;
  width: 100%;
  overflow: hidden;
}

.Bento__Item--visual-as-background .Bento__Visual {
  order: -1;
  grid-row: 1 /-1;
  grid-column: 1 /-1;
}

.Bento__Visual > img {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.Bento__Visual-no-fill > img {
  height: 100%;
  width: 100%;
  object-fit: contain;
  border-radius: 0;
}

/* Bento Padding */
.Bento-padding--condensed {
  padding: var(--brand-Bento-content-padding-condensed);
}
.Bento-padding--normal {
  padding: var(--brand-Bento-content-padding-normal);
}
.Bento-padding--spacious {
  padding: var(--brand-Bento-content-padding-spacious);
}

.Bento-padding--condensed > img,
.Bento-padding--normal > img,
.Bento-padding--spacious {
  border-radius: var(--brand-borderRadius-large);
}

/* Bento Flow */
.Bento__Item--flow-column {
  grid-auto-flow: column;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr;
}

.Bento__Item--flow-row {
  grid-auto-flow: row;
}

.Bento__call-to-action {
  justify-content: inherit;
  margin-top: var(--base-size-24);
}

.Bento__call-to-action--fixed {
  margin-top: auto;
}

.Bento_Content-text {
  margin-top: var(--base-size-8);
}

/* Column Span */
.Bento__Item--column-span-1 {
  grid-column: auto/span 1;
}

.Bento__Item--column-span-2 {
  grid-column: auto/span 2;
}

.Bento__Item--column-span-3 {
  grid-column: auto/span 3;
}

.Bento__Item--column-span-4 {
  grid-column: auto/span 4;
}

.Bento__Item--column-span-5 {
  grid-column: auto/span 5;
}

.Bento__Item--column-span-6 {
  grid-column: auto/span 6;
}

.Bento__Item--column-span-7 {
  grid-column: auto/span 7;
}

.Bento__Item--column-span-8 {
  grid-column: auto/span 8;
}

.Bento__Item--column-span-9 {
  grid-column: auto/span 9;
}

.Bento__Item--column-span-10 {
  grid-column: auto/span 10;
}

.Bento__Item--column-span-11 {
  grid-column: auto/span 11;
}

.Bento__Item--column-span-12 {
  grid-column: auto/span 12;
}

/* Row Span */
.Bento__Item--row-span-1 {
  grid-row: auto/span 1;
}

.Bento__Item--row-span-2 {
  grid-row: auto/span 2;
}

.Bento__Item--row-span-3 {
  grid-row: auto/span 3;
}

.Bento__Item--row-span-4 {
  grid-row: auto/span 4;
}

.Bento__Item--row-span-5 {
  grid-row: auto/span 5;
}

.Bento__Item--row-span-6 {
  grid-row: auto/span 6;
}

.Bento__Item--row-span-7 {
  grid-row: auto/span 7;
}

.Bento__Item--row-span-8 {
  grid-row: auto/span 8;
}

.Bento__Item--row-span-9 {
  grid-row: auto/span 9;
}

.Bento__Item--row-span-10 {
  grid-row: auto/span 10;
}

.Bento__Item--row-span-11 {
  grid-row: auto/span 11;
}

.Bento__Item--row-span-12 {
  grid-row: auto/span 12;
}

/* Column Start */
.Bento__Item--column-start-1 {
  grid-column-start: 1;
}

.Bento__Item--column-start-2 {
  grid-column-start: 2;
}

.Bento__Item--column-start-3 {
  grid-column-start: 3;
}

.Bento__Item--column-start-4 {
  grid-column-start: 4;
}

.Bento__Item--column-start-5 {
  grid-column-start: 5;
}

.Bento__Item--column-start-6 {
  grid-column-start: 6;
}

.Bento__Item--column-start-7 {
  grid-column-start: 7;
}

.Bento__Item--column-start-8 {
  grid-column-start: 8;
}

.Bento__Item--column-start-9 {
  grid-column-start: 9;
}

.Bento__Item--column-start-10 {
  grid-column-start: 10;
}

.Bento__Item--column-start-11 {
  grid-column-start: 11;
}

.Bento__Item--column-start-12 {
  grid-column-start: 12;
}

/* Row Start */
.Bento__Item--row-start-1 {
  grid-row-start: 1;
}

.Bento__Item--row-start-2 {
  grid-row-start: 2;
}

.Bento__Item--row-start-3 {
  grid-row-start: 3;
}

.Bento__Item--row-start-4 {
  grid-row-start: 4;
}

.Bento__Item--row-start-5 {
  grid-row-start: 5;
}

.Bento__Item--row-start-6 {
  grid-row-start: 6;
}

.Bento__Item--row-start-7 {
  grid-row-start: 7;
}

.Bento__Item--row-start-8 {
  grid-row-start: 8;
}

.Bento__Item--row-start-9 {
  grid-row-start: 9;
}

.Bento__Item--row-start-10 {
  grid-row-start: 10;
}

.Bento__Item--row-start-11 {
  grid-row-start: 11;
}

.Bento__Item--row-start-12 {
  grid-row-start: 12;
}

/* Bento Item Vertical Align */
.Bento__Item--verticalAlign-start {
  justify-content: start;
}

.Bento__Item--verticalAlign-center {
  justify-content: center;
}

.Bento__Item--verticalAlign-end {
  justify-content: end;
}

/* Bento Item Horizontal Align */
.Bento__Item--horizontalAlign-start {
  align-items: start;
}

.Bento__Item--horizontalAlign-center {
  align-items: center;
}

.Bento__Item--horizontalAlign-end {
  align-items: end;
}
/* ... */

